--- a/TasteSwipeObjectiveC/Base.lproj/Main.storyboard
+++ b/TasteSwipeObjectiveC/Base.lproj/Main.storyboard
@@ -1117,6 +1117,23 @@
             </objects>
             <point key="canvasLocation" x="3258" y="2026"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="0Dg-5N-zbO">
+            <objects>
+                <viewController id="gDJ-0B-v3O" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PxB-v6-0MT"/>
+                        <viewControllerLayoutGuide type="bottom" id="PZq-aF-oKm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bL9-AI-GZN">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XCs-EG-hvz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3258" y="2974"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="XVD-Zq-ARh">
             <objects>
